Avoid unnecessary spacing between page thumbs

--- a/src/stylesheets/components/viewer/_thumbnail-view.scss
+++ b/src/stylesheets/components/viewer/_thumbnail-view.scss
@@ -18,7 +18,7 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	width: 100%;
-	height: 100%;
+	//height: 100%;
 	padding: 10px 30px 0;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
